--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<meta charset="utf-8">
-<title>HYP3 Vue Template</title>
-<script src="lib/vue.global.js"></script>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>HYP3 Vue Template</title>
+    <script src="lib/vue.global.js"></script>
 </head>
 
 <body>
 <h1>HYP3 Vue Template</h1>
 
 <div id="app">
-<p><input v-model="message"></p>
-<p>{{ message }}</p>
+    <button @click="toggleTheme">Toggle Theme</button>
+
+    <ul :class="currentTheme">
+        <li v-if="notesData.length === 0">Sorry, no entries</li>
+        <li v-for="(entry, index) in notesData" :key="index">
+            <button @click="removeEntry(index)">x</button>
+            <em>{{ entry.date }}</em> -- {{ entry.contents }}
+        </li>
+    </ul>
+
+    <textarea v-model="contents"></textarea><br>
+
+    <button @click="saveData">Save</button>
+    <button @click="clearData">Clear All Entries</button>
 </div>
 
 <hr>
 <p style="font-size:small">
-Hypermedia Systems & Architecture (<a href="http://www.fh-ooe.at/mtd">MTD</a>)<br>
+    Hypermedia Systems & Architecture (<a href="http://www.fh-ooe.at/mtd">MTD</a>)<br>
 </p>
+
 <script src="script.js"></script>
 </body>
 </html>
